--- a/index.html
+++ b/index.html
@@ -2,124 +2,71 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Ultimate File Resizer Tool</title>
-<script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<title>Mobile Recharge Portal with Admin</title>
 <style>
-*{box-sizing:border-box;font-family:Poppins,sans-serif}
-body{margin:0;background:linear-gradient(135deg,#020617,#0f172a,#020617);color:#fff}
-.container{max-width:1050px;margin:auto;padding:25px}
-.card{background:rgba(255,255,255,0.05);backdrop-filter:blur(14px);border-radius:22px;padding:25px;box-shadow:0 20px 60px rgba(0,0,0,.5)}
-h1{text-align:center}
-.tabs{display:flex;gap:10px;margin:20px 0;flex-wrap:wrap}
-.tab{flex:1;padding:12px;border-radius:12px;background:#1e293b;text-align:center;cursor:pointer}
-.tab.active{background:#3b82f6}
-.section{display:none}
-.section.active{display:block}
-label{display:block;margin-top:10px;color:#cbd5e1}
-input,select,button{width:100%;padding:12px;border-radius:10px;border:none;margin-top:6px}
-input,select{background:#020617;color:#fff;border:1px solid #334155}
-button{background:#3b82f6;color:white;font-weight:600;cursor:pointer;margin-top:15px}
-button:hover{background:#2563eb}
-#download{display:none;margin-top:15px;display:inline-block;background:#10b981;padding:12px 20px;border-radius:10px;text-decoration:none;color:#fff}
-.status{margin-top:12px;color:#94a3b8}
-footer{text-align:center;margin-top:40px;color:#cbd5e1}
+body{font-family:Arial;margin:0;background:#f2f4f8}
+header{background:#0a3d91;color:#fff;padding:15px;text-align:center;font-size:20px;font-weight:bold}
+.container{padding:15px;max-width:600px;margin:auto}
+.card{background:#fff;border-radius:12px;padding:15px;margin-bottom:15px;box-shadow:0 4px 10px rgba(0,0,0,.08)}
+input,select,button{width:100%;padding:12px;margin-top:8px;border-radius:8px;border:1px solid #ccc;font-size:15px}
+button{background:#0a3d91;color:#fff;border:none;font-weight:bold;cursor:pointer}
+button:hover{background:#062a63}
+.plan{border:1px solid #ddd;padding:10px;border-radius:10px;margin-top:10px}
+.plan strong{color:#0a3d91}
+.small{color:#666;font-size:13px}
+.success{background:#d4edda;color:#155724;padding:12px;border-radius:8px;margin-top:10px;display:none}
+.admin{background:#fff3cd;color:#856404;padding:12px;border-radius:8px;margin-bottom:15px}
 </style>
 </head>
 <body>
+<header>Mobile Recharge Service with Admin Panel</header>
 <div class="container">
-<div class="card">
-<h1>Ultimate File Resizer Tool</h1><div class="tabs">
-<div class="tab active" onclick="switchTab('img')">Image Tools</div>
-<div class="tab" onclick="switchTab('pdf')">PDF Tools</div>
-<div class="tab" onclick="switchTab('img2pdf')">Image → PDF</div>
-</div><div id="img" class="section active">
-<label>Target Size (KB)</label>
-<input type="number" id="imgSize">
-<label>Output Format</label>
-<select id="imgFormat"><option value="image/jpeg">JPG</option><option value="image/png">PNG</option><option value="image/webp">WEBP</option></select>
-<label>Max Width (px)</label>
-<input type="number" id="maxWidth">
-<label>Max Height (px)</label>
-<input type="number" id="maxHeight">
-<label>Quality (0.1 - 1)</label>
-<input type="number" step="0.1" min="0.1" max="1" value="0.9" id="quality">
-<label>Upload Image</label>
-<input type="file" id="imgFile" accept="image/*">
-<button onclick="compressImage()">Process Image</button>
-</div><div id="pdf" class="section">
-<label>Page Range (example: 1-3 or blank)</label>
-<input type="text" id="pageRange">
-<label>Rotate Pages</label>
-<select id="rotate"><option value="0">No</option><option value="90">90°</option><option value="180">180°</option><option value="270">270°</option></select>
-<label>Upload PDF</label>
-<input type="file" id="pdfFile" accept="application/pdf">
-<button onclick="compressPDF()">Process PDF</button>
-</div><div id="img2pdf" class="section">
-<label>Select Images (multiple allowed)</label>
-<input type="file" id="imgToPdfFiles" accept="image/*" multiple>
-<button onclick="imagesToPDF()">Convert to PDF</button>
-</div><div class="status" id="status"></div>
-<a id="download">Download File</a>
+<div class="admin">
+<strong>Admin Portal</strong><br>
+Wallet Balance: ₹<span id="wallet">5000</span>
 </div>
-<footer>developed by SHOYAB MANSURI</footer>
-</div><script>
-function switchTab(id){document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));event.target.classList.add('active');document.querySelectorAll('.section').forEach(s=>s.classList.remove('active'));document.getElementById(id).classList.add('active');}
-function showStatus(t){document.getElementById('status').innerText=t}
-function ready(blob,name){const url=URL.createObjectURL(blob);const a=document.getElementById('download');a.href=url;a.download=name;a.style.display='inline-block';a.innerText='Download Ready File';showStatus('Done ✔');}
-
-async function compressImage(){
-const file=document.getElementById('imgFile').files[0];if(!file)return alert('Select image');
-const targetKB=parseFloat(document.getElementById('imgSize').value)||Infinity;
-const format=document.getElementById('imgFormat').value;
-let quality=parseFloat(document.getElementById('quality').value)||0.9;
-const maxW=parseInt(document.getElementById('maxWidth').value)||null;
-const maxH=parseInt(document.getElementById('maxHeight').value)||null;
-showStatus('Processing Image...');
-const img=new Image();img.src=URL.createObjectURL(file);
-img.onload=async()=>{
-let w=img.width,h=img.height;
-if(maxW&&w>maxW){h=h*(maxW/w);w=maxW}
-if(maxH&&h>maxH){w=w*(maxH/h);h=maxH}
-let blob;
-for(let i=0;i<20;i++){
-const canvas=document.createElement('canvas');canvas.width=w;canvas.height=h;canvas.getContext('2d').drawImage(img,0,0,w,h);
-blob=await new Promise(r=>canvas.toBlob(r,format,quality));
-if(blob.size/1024>targetKB)quality-=0.05;else break;
+<div class="card">
+<label>Mobile Number</label>
+<input type="tel" id="number" placeholder="Enter 10 digit mobile number" maxlength="10">
+<label>Select Operator</label>
+<select id="operator">
+<option value="">Select Company</option>
+<option value="airtel">Airtel</option>
+<option value="jio">Jio</option>
+<option value="vi">Vi</option>
+<option value="bsnl">BSNL</option>
+</select>
+<button onclick="showPlans()">Show Plans</button>
+</div>
+<div id="plans" class="card" style="display:none"></div>
+<div id="success" class="success">Recharge Successful (Demo)</div>
+</div>
+<script>
+let walletBalance=5000;
+const planDB={
+airtel:[{price:199,valid:'28 Days',data:'2GB/day'},{price:299,valid:'28 Days',data:'2GB/day + OTT'},{price:719,valid:'84 Days',data:'1.5GB/day'}],
+jio:[{price:209,valid:'28 Days',data:'1GB/day'},{price:239,valid:'28 Days',data:'1.5GB/day'},{price:666,valid:'84 Days',data:'1.5GB/day'}],
+vi:[{price:199,valid:'24 Days',data:'1GB/day'},{price:299,valid:'28 Days',data:'1.5GB/day'},{price:719,valid:'84 Days',data:'1.5GB/day'}],
+bsnl:[{price:107,valid:'28 Days',data:'3GB Total'},{price:197,valid:'70 Days',data:'2GB/day'},{price:397,valid:'150 Days',data:'2GB/day'}]
+};
+function showPlans(){
+const num=document.getElementById('number').value;
+const op=document.getElementById('operator').value;
+if(num.length!=10||!op){alert('Enter valid number & operator');return}
+const box=document.getElementById('plans');
+box.innerHTML='<h3>Select Recharge Plan</h3>';
+planDB[op].forEach(p=>{
+box.innerHTML+=<div class="plan"><strong>₹${p.price}</strong><br><span class="small">Validity: ${p.valid}<br>Data: ${p.data}</span><br><button onclick="recharge(${p.price})">Recharge Now</button></div>
+});
+box.style.display='block';
 }
-ready(blob,'processed');
-};}
-
-async function compressPDF(){
-const file=document.getElementById('pdfFile').files[0];if(!file)return alert('Select PDF');
-showStatus('Processing PDF...');
-const bytes=await file.arrayBuffer();
-const pdf=await PDFLib.PDFDocument.load(bytes);
-const newPdf=await PDFLib.PDFDocument.create();
-let pagesIndex=pdf.getPageIndices();
-const range=document.getElementById('pageRange').value;
-if(range&&range.includes('-')){const [s,e]=range.split('-').map(x=>parseInt(x)-1);pagesIndex=pagesIndex.slice(s,e+1)}
-const pages=await newPdf.copyPages(pdf,pagesIndex);
-const rotate=parseInt(document.getElementById('rotate').value);
-pages.forEach(p=>{if(rotate)p.setRotation(PDFLib.degrees(rotate));newPdf.addPage(p)});
-const out=await newPdf.save({useObjectStreams:true,compress:true});
-ready(new Blob([out],{type:'application/pdf'}),'processed.pdf');
+function recharge(amount){
+if(amount>walletBalance){alert('Insufficient Wallet Balance');return}
+walletBalance-=amount;
+document.getElementById('wallet').innerText=walletBalance;
+document.getElementById('success').style.display='block';
+window.scrollTo({top:document.body.scrollHeight,behavior:'smooth'});
 }
-
-async function imagesToPDF(){
-const files=document.getElementById('imgToPdfFiles').files;
-if(!files.length)return alert('Select images');
-showStatus('Converting images to PDF...');
-const pdfDoc=await PDFLib.PDFDocument.create();
-for(const file of files){
-const bytes=await file.arrayBuffer();
-let img;
-if(file.type.includes('png')) img=await pdfDoc.embedPng(bytes); else img=await pdfDoc.embedJpg(bytes);
-const page=pdfDoc.addPage([img.width,img.height]);
-page.drawImage(img,{x:0,y:0,width:img.width,height:img.height});
-}
-const pdfBytes=await pdfDoc.save();
-ready(new Blob([pdfBytes],{type:'application/pdf'}),'images.pdf');
-}
-</script></body>
+</script>
+</body>
 </html>
