--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang="hi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mobile Recharge Portal with Admin</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mobile Recharge Portal with Admin & History</title>
 <style>
 body{font-family:Arial;margin:0;background:#f2f4f8}
 header{background:#0a3d91;color:#fff;padding:15px;text-align:center;font-size:20px;font-weight:bold}
@@ -16,10 +16,12 @@ button:hover{background:#062a63}
 .small{color:#666;font-size:13px}
 .success{background:#d4edda;color:#155724;padding:12px;border-radius:8px;margin-top:10px;display:none}
 .admin{background:#fff3cd;color:#856404;padding:12px;border-radius:8px;margin-bottom:15px}
+.history{background:#e2e3e5;padding:10px;border-radius:10px;margin-top:10px;font-size:14px}
+.hide{display:none}
 </style>
 </head>
 <body>
-<header>Mobile Recharge Service with Admin Panel</header>
+<header>Mobile Recharge Portal with Admin & History</header>
 <div class="container">
 <div class="admin">
 <strong>Admin Portal</strong><br>
@@ -38,35 +40,22 @@ Wallet Balance: ₹<span id="wallet">5000</span>
 </select>
 <button onclick="showPlans()">Show Plans</button>
 </div>
-<div id="plans" class="card" style="display:none"></div>
+<div id="plans" class="card hide"></div>
 <div id="success" class="success">Recharge Successful (Demo)</div>
+<div class="card">
+<h3>Recharge History</h3>
+<div id="history"></div>
+</div>
 </div>
 <script>
 let walletBalance=5000;
-const planDB={
-airtel:[{price:199,valid:'28 Days',data:'2GB/day'},{price:299,valid:'28 Days',data:'2GB/day + OTT'},{price:719,valid:'84 Days',data:'1.5GB/day'}],
-jio:[{price:209,valid:'28 Days',data:'1GB/day'},{price:239,valid:'28 Days',data:'1.5GB/day'},{price:666,valid:'84 Days',data:'1.5GB/day'}],
-vi:[{price:199,valid:'24 Days',data:'1GB/day'},{price:299,valid:'28 Days',data:'1.5GB/day'},{price:719,valid:'84 Days',data:'1.5GB/day'}],
-bsnl:[{price:107,valid:'28 Days',data:'3GB Total'},{price:197,valid:'70 Days',data:'2GB/day'},{price:397,valid:'150 Days',data:'2GB/day'}]
-};
-function showPlans(){
-const num=document.getElementById('number').value;
-const op=document.getElementById('operator').value;
-if(num.length!=10||!op){alert('Enter valid number & operator');return}
-const box=document.getElementById('plans');
-box.innerHTML='<h3>Select Recharge Plan</h3>';
-planDB[op].forEach(p=>{
-box.innerHTML+=<div class="plan"><strong>₹${p.price}</strong><br><span class="small">Validity: ${p.valid}<br>Data: ${p.data}</span><br><button onclick="recharge(${p.price})">Recharge Now</button></div>
-});
-box.style.display='block';
-}
-function recharge(amount){
-if(amount>walletBalance){alert('Insufficient Wallet Balance');return}
-walletBalance-=amount;
-document.getElementById('wallet').innerText=walletBalance;
-document.getElementById('success').style.display='block';
-window.scrollTo({top:document.body.scrollHeight,behavior:'smooth'});
-}
-</script>
+let rechargeHistory=[];const planDB={ airtel:[{price:39,valid:'3 Days',data:'3GB Total'},{price:199,valid:'28 Days',data:'2GB Daily'},{price:349,valid:'28 Days',data:'Unlimited Data'}], jio:[{price:349,valid:'28 Days',data:'2GB Daily'},{price:599,valid:'84 Days',data:'2GB Daily'}], vi:[{price:365,valid:'30 Days',data:'Unlimited Data'},{price:379,valid:'84 Days',data:'6GB Total'}], bsnl:[{price:429,valid:'28 Days',data:'1GB Daily'},{price:499,valid:'90 Days',data:'1GB Daily'}] };
+
+function showPlans(){ const num=document.getElementById('number').value; const op=document.getElementById('operator').value; if(num.length!=10||!op){alert('Enter valid number & operator');return} const box=document.getElementById('plans'); box.innerHTML='<h3>Recharge Plans</h3>'; planDB[op].forEach(p=>{ box.innerHTML+=<div class="plan"><strong>₹${p.price}</strong><br><span class="small">Validity: ${p.valid}<br>Benefits: ${p.data}</span><br><button onclick="recharge('${num}','${op}',${p.price},'${p.valid}','${p.data}')">Recharge ₹${p.price}</button></div>; }); box.classList.remove('hide'); }
+
+function recharge(number, operator, amount, validity, data){ if(amount>walletBalance){alert('Insufficient Wallet Balance');return} walletBalance-=amount; document.getElementById('wallet').innerText=walletBalance; document.getElementById('success').style.display='block'; rechargeHistory.unshift({number,operator,amount,validity,data,date:new Date().toLocaleString(),status:'Success'}); updateHistory(); window.scrollTo({top:document.body.scrollHeight,behavior:'smooth'}); }
+
+function updateHistory(){ const histBox=document.getElementById('history'); histBox.innerHTML=''; rechargeHistory.forEach(r=>{ histBox.innerHTML+=<div class="history"><strong>Number:</strong> ${r.number} | <strong>Operator:</strong> ${r.operator} | <strong>Amount:</strong> ₹${r.amount} | <strong>Validity:</strong> ${r.validity} | <strong>Data:</strong> ${r.data} | <strong>Date:</strong> ${r.date} | <strong>Status:</strong> ${r.status}</div>; }); } </script>
+
 </body>
 </html>
